Added iron:router meteor package. Added landing page. Reorganized files. Embeded video. Added link to actual site. Added templates.

--- a/client/Templates/index.html
+++ b/client/Templates/index.html
@@ -1,4 +1,4 @@
-
+<template name = "index">
   <head>
     <meta charset="UTF-8">
     <title>A Pen by  Narayan Prusty</title>
@@ -7,7 +7,7 @@
 
     <link rel='stylesheet prefetch' href='https://cdn.rawgit.com/Dogfalo/materialize/master/dist/css/materialize.min.css'>
 
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="../css/style.css">
 
 
 
@@ -141,3 +141,4 @@
 
 
   </body>
+</template>
