added copyright logo. cleaned 'enter site' button. published to osucampaign.meteor.com

--- a/client/Templates/home.html
+++ b/client/Templates/home.html
@@ -29,24 +29,29 @@
          <div class="row">
            <div class="col s12 m4 l4">
 
-             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+             <p>Welcome to the campign of ______ and _________! We are dedicated to bringing you the blah blah blah lol</p>
+             <p>This site is currently in beta, so calm down if anything isn't working properly....</p>
            </div>
            <div class="col s12 m4 l4">
 
              <div class="card blue-grey darken-1">
-
+ <a href='/index'>Enter Site
                <div class="card-action">
                  <a href='/index'>Enter Site</a>
                </div>
+             </a>
              </div>
            </div>
            <div class="col s12 m4 l4">
 
-             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+             <p>Click the link to enter the site! From there you will be able to view more information about the candidates!</p>
+             <p>This site was developed by Kamari Wright and Ryan-Alexander Thomas</p>
            </div>
          </div>
        </div>
 </body>
+
+<footer id = "homefoot">
+  <p>&copy; 2016 Kamari Wright and Ryan-Alexander Thomas.</p>
+</footer>
 </template>
