--- a/css/style.css
+++ b/css/style.css
@@ -146,3 +146,11 @@ footer
 {
 	padding-top: 0px;
 }
+
+#homefoot{
+ font-size: 0.75em;
+  text-align: center;
+  clear: both;
+  padding-top: 50px;
+  color: #ccc;
+}
