--- a/client/Templates/home.html
+++ b/client/Templates/home.html
@@ -1,7 +1,10 @@
 <template name = "home">
 
   <head>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
+
     <title>landing page</title>
 
 
@@ -17,11 +20,14 @@
 
 <body>
   <div class="container about">
-         <h5>Welcome to the Campaign!</h5>
-         <h6></h6>
 
 
-         <object data="http://www.youtube.com/v/bjfM4Wrj9UI?rel=0&autoplay=1" style="height: 732px; width: 900px;" type="application/x-shockwave-flash"> <param name="movie" value="http://www.youtube.com/v/bjfM4Wrj9UI" /></object>
+    <div class="intro yellow darken-4 z-depth-1">
+        <h5 clas="grey lighten-4 grey-text text-darken-1">welcome to the campaign site</h5>
+      </div>
+
+
+         <object id = "homevideo"  data="http://www.youtube.com/v/jjaP3_k0-fY?rel=0&autoplay=1" style="height: 400px; width: 700px;" type="application/x-shockwave-flash"> <param name="movie" value="http://www.youtube.com/v/jjaP3_k0-fY" /></object>
 
 
 
@@ -29,23 +35,28 @@
          <div class="row">
            <div class="col s12 m4 l4">
 
-             <p>Welcome to the campign of ______ and _________! We are dedicated to bringing you the blah blah blah lol</p>
-             <p>This site is currently in beta, so calm down if anything isn't working properly....</p>
+
            </div>
            <div class="col s12 m4 l4">
 
-             <div class="card blue-grey darken-1">
- <a href='/index'>Enter Site
-               <div class="card-action">
-                 <a href='/index'>Enter Site</a>
-               </div>
+
+
+              <a href='/index'>
+
+                <div class="intro yellow darken-4 z-depth-1">
+                    <h5 clas="grey lighten-4 grey-text text-darken-1">Click here to enter</h5>
+                  </div>
+
              </a>
-             </div>
+
+
            </div>
+
+
            <div class="col s12 m4 l4">
 
-             <p>Click the link to enter the site! From there you will be able to view more information about the candidates!</p>
-             <p>This site was developed by Kamari Wright and Ryan-Alexander Thomas</p>
+
+
            </div>
          </div>
        </div>
