--- a/client/Templates/index.html
+++ b/client/Templates/index.html
@@ -1,7 +1,9 @@
 <template name = "index">
   <head>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <title>A Pen by  Narayan Prusty</title>
+    <title>osu campaign</title>
 
 
 
@@ -16,7 +18,7 @@
 
   <body>
 
-    <div class="intro deep-orange lighten-2 z-depth-1">
+    <div class="intro yellow darken-4 z-depth-1">
         <h1 class="grey-text text-lighten-5">Test test</h1>
         <h5 clas="grey lighten-4 grey-text text-darken-1">it's lit</h5>
       </div>
@@ -33,34 +35,34 @@
           </div>
           <div class="col s12 m4 l4">
             <h6>Profile</h6>
-            <div class="card blue-grey darken-1">
+            <div class="card yellow darken-4 z">
               <div class="card-content white-text">
                 <img src="http://labs.qnimate.com/portfolio-materialize/images/profile.png" width="64" height="64">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
               </div>
               <div class="card-action">
-                <a href="#">Link</a>
-                <a href='#'>Link</a>
+                <a class = "grey" href="#">Link</a>
+                <a class = "grey" href='#'>Link</a>
               </div>
             </div>
           </div>
           <div class="col s12 m4 l4">
-            <h6>current jobs</h6>
+            <h6>BLANK</h6>
             <ul class="collapsible">
               <li class="active">
-                <div class="collapsible-header"><i class="mdi-av-web"></i>Designer</div>
+                <div class="collapsible-header"><i class="mdi-av-web"></i>Drop1</div>
                 <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
               </li>
               <li>
-                <div class="collapsible-header"><i class="mdi-editor-format-align-justify"></i>Developer</div>
+                <div class="collapsible-header"><i class="mdi-editor-format-align-justify"></i>Drop2</div>
                 <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
               </li>
               <li>
-                <div class="collapsible-header"><i class="mdi-av-play-shopping-bag"></i>Video Editor</div>
+                <div class="collapsible-header"><i class="mdi-av-play-shopping-bag"></i>Drop3</div>
                 <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
               </li>
               <li>
-                <div class="collapsible-header"><i class="mdi-editor-insert-comment"></i>Support Asst.</div>
+                <div class="collapsible-header"><i class="mdi-editor-insert-comment"></i>Drop4</div>
                 <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
               </li>
             </ul>
@@ -69,8 +71,8 @@
       </div>
 
       <div class="container portfolio">
-        <h5>portfolio</h5>
-        <h6>MY LATEST PROJECTS</h6>
+        <h5>Blank</h5>
+        <h6>SQUARES</h6>
         <hr>
         <div class="row">
           <div class="col s12 m12 l12 portfolio-holder">
@@ -127,7 +129,7 @@
         <footer>
           <div class="footer-copyright">
             <div class="container">
-            © 2014 Copyright Text
+            © 2016 Kamari Wright and Ryan-Alexander Thomas
             <a class="grey-text text-lighten-4 right" href="#!">Link</a>
             </div>
           </div>
