--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body, html
 {
 	background-image: url(images/pattern7.png) !important;
-
+/*#DFB8A5    orange accent-4*/
 
 }
 
@@ -158,16 +158,24 @@ footer
 
 	#homevideo {
 
-		margin:auto;
-		margin-top: 40%;
+		display: block;
+		margin-top: 10%;
 		margin-bottom: 10%;
 	}
 
 	#homefoot{
-	 font-size: 0.75em;
+	 font-size: 1em;
 	  text-align: center;
 	  clear: both;
-		margin-top: 40%;
+		margin-top: -20%;
+
+	  color: #000;
+	}
+	#indexfoot{
+	 font-size: 1em;
+	  text-align: center;
+	  clear: both;
+		margin-top: 0;
 
 	  color: #000;
 	}
@@ -176,6 +184,7 @@ footer
 
 }
 
+
 /*!!!DESKTOP VIEW STRICT CSS!!!*/
 
 @media screen and (min-width: 660px) {
@@ -183,11 +192,11 @@ footer
 	/*ADDED CSS STYLING*/
 
 	#homefoot{
-	 font-size: 0.75em;
+	 font-size: 1em;
 		text-align: center;
 		clear: both;
 		margin-top: 0;
-		color: #ccc;
+		color: #000;
 	}
 
 	#homevideo {
@@ -199,4 +208,111 @@ footer
 
 
 
+}
+
+
+/*!!!CONTACT US CSS!!!*/
+
+body {
+  font: 16px Helvetica;
+
+}
+
+.contactcontainer {
+  width: 600px;
+  margin: 2em auto;
+  overflow: hidden;
+  background: white;
+  border-radius: 5px;
+}
+
+.message, .contact, .name, .footer, header, footer, textarea {
+  display: block;
+  padding: 0;
+  margin: 0;
+  border: 0;
+  clear: both;
+  overflow: hidden;
+}
+
+#contactheader {
+  height: 75px;
+  background: rgba(0, 0, 0, 0.05);
+  line-height: 75px;
+  padding-left: 20px;
+  border-radius: 5px 5px 0 0;
+}
+
+#contactfooter {
+  height: 75px;
+  background: rgba(0, 0, 0, 0.05);
+  line-height: 75px;
+  padding-left: 20px;
+  border-radius: 5px 5px 0 0;
+}
+#contacth1 {
+  font-size: 1.2em;
+  text-transform: uppercase;
+  color: rgba(51, 51, 51, 0.4);
+}
+
+.first, .last {
+  float: left;
+  width: 278px;
+  margin: 0;
+  padding: 0 0 0 20px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  height: 50px;
+}
+
+.last {
+  width: 279px;
+  border-left: 0;
+}
+
+.email, textarea {
+  height: 50px;
+  width: 578px;
+  line-height: 50px;
+  padding: 0 0 0 20px;
+  border-top: 0;
+  border-left: 1px solid rgba(0, 0, 0, 0.1);
+  border-right: 1px solid rgba(0, 0, 0, 0.1);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+textarea {
+  height: 200px;
+}
+
+#contactfooter {
+  height: 49px;
+  border-top: 1px dashed rgba(0, 0, 0, 0.3);
+  border-radius: 0 0 5px 5px;
+  padding-left: 0;
+  padding-right: 20px;
+}
+#contactfooter button {
+  height: 32px;
+  background: #e74c3c;
+  border-radius: 5px;
+  border: 0;
+  margin: 7px 0;
+  color: white;
+  float: right;
+  padding: 0 20px 0 20px;
+  border-bottom: 3px solid #c0392b;
+  transition: all linear .2s;
+}
+#contactfooter button:hover {
+  background: #c0392b;
+}
+#contactfooter button:focus {
+  outline: none;
+}
+
+.first:focus, .last:focus, .email:focus, textarea:focus, textarea:focus {
+  outline: none;
+  background: rgba(52, 152, 219, 0.1);
+  color: rgba(51, 51, 51, 0.7);
 }
