--- a/client/Templates/index.html
+++ b/client/Templates/index.html
@@ -95,27 +95,38 @@
               <form class="col s12">
                 <div class="row">
                   <div class="input-field col s6">
-                    <input id="first_name" type="text" class="validate">
-                    <label for="first_name">First Name</label>
-                  </div>
-                  <div class="input-field col s6">
-                    <input id="last_name" type="text" class="validate">
-                    <label for="last_name">Last Name</label>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="input-field col s12">
-                    <input id="email" type="email" class="validate">
-                    <label for="email">E-Mail</label>
-                  </div>
-                </div>
-                <textarea class="materialize-textarea" placeholder="Your Message" required></textarea>
-                <button class="btn waves-effect waves-light" type="submit" name="action">Submit
-                  <i class="mdi-content-send right"></i>
-                </button>
-              </form>
+
+
+
+
+
+                    <div class='contactcontainer'>
+                      <header id="contactheader">
+                        <h1 id="contacth1">Send us a suggestion!</h1>
+                      </header>
+                      <div class='name'>
+                        <input class='first' placeholder='First Name' type='text'>
+                        <input class='last' placeholder='Last Name' type='text'>
+                      </div>
+                      <div class='contact'>
+                        <input class='email' placeholder='E-mail Address' type='text'>
+                      </div>
+                      <div class='message'>
+                        <textarea placeholder='Your Suggestions Here!'></textarea>
+                      </div>
+
+                        <button id ="contactbutton">Send Suggestion</button>
+                  
+                    </div>
+
+</div>
+
+
+
             </div>
-          </div>
+
+
+        </form>
           <div class="col s12 m6 l6 contact-holder">
             <h6 class="mdi-action-home">Address</h6>
             <p>Nr. 6, 21 Awesome Street, London, UK</p>
@@ -126,21 +137,29 @@
           </div>
         </div>
       </div>
-        <footer>
-          <div class="footer-copyright">
-            <div class="container">
-            © 2016 Kamari Wright and Ryan-Alexander Thomas
-            <a class="grey-text text-lighten-4 right" href="#!">Link</a>
-            </div>
-          </div>
-        </footer>
+
+
+
+
+
+
+
+
+
+
+
+
+
+      <footer id = "indexfoot">
+        <p>&copy; 2016 Kamari Wright and Ryan-Alexander Thomas.</p>
+      </footer>
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 <script src='https://cdn.rawgit.com/Dogfalo/materialize/master/dist/js/materialize.min.js'></script>
 
         <script src="index.js"></script>
 
 
-
-
+</div>
+</div>
   </body>
 </template>
