--- a/client/Templates/index.html
+++ b/client/Templates/index.html
@@ -3,17 +3,11 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
+
     <title>osu campaign</title>
 
-
-
     <link rel='stylesheet prefetch' href='https://cdn.rawgit.com/Dogfalo/materialize/master/dist/css/materialize.min.css'>
-
-        <link rel="stylesheet" href="../css/style.css">
-
-
-
-
+    <link rel="stylesheet" href="../css/style.css">
   </head>
 
   <body>
@@ -23,11 +17,41 @@
         <h5 clas="grey lighten-4 grey-text text-darken-1">it's lit</h5>
       </div>
 
- <div class="container about">
-        <h5>about us</h5>
-        <h6>let me introduce  myself</h6>
-        <hr>
-        <div class="row">
+<div class = "container questions">
+  <h5>Three Questions </h5>
+  <h6>Our three most important questions </h6>
+  <hr>
+  <div class = "row">
+    <div class = "col s12 m4">
+      <div class = "card">
+        <div class ="card-content">
+          <span class = "card-title"> Question 1 </span>
+        </div>
+      </div>
+    </div>
+    <div class = "col s12 m4">
+      <div class = "card">
+        <div class ="card-content">
+          <span class = "card-title"> Question 2 </span>
+        </div>
+      </div>
+    </div>
+    <div class = "col s12 m4">
+      <div class = "card">
+        <div class ="card-content">
+          <span class = "card-title"> Question 3 </span>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Section 3 -->
+<div class="container about">
+   <h5>about us</h5>
+   <h6>let me introduce myself</h6>
+   <hr>
+  <div class="row">
           <div class="col s12 m4 l4">
             <h6>Story</h6>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
@@ -68,8 +92,9 @@
             </ul>
           </div>
         </div>
-      </div>
+    </div>
 
+      <!--Section 4 -->
       <div class="container portfolio">
         <h5>Blank</h5>
         <h6>SQUARES</h6>
@@ -85,21 +110,42 @@
           </div>
         </div>
       </div>
-<div class="container contact">
+
+      <!--Section 5-->
+      <div class="container whos-involved">
+        <h5> Who's Involved </h5>
+        <h6> See who's on our staff! </h6>
+        <hr>
+        <!-- Wheel here -->
+      </div>
+
+      <!--Section 6-->
+      <div class="container get-involved">
+        <h5> Get Invovled </h5>
+        <h6> Connect with us on social media! </h6>
+        <hr>
+
+        <div class = "row">
+          <div class = "col l6 m6 s12">
+            <!--Twitter Feed-->
+          </div>
+          <div class = "col l6 m6 s12">
+            <!--Facebook Feed-->
+          </div>
+        </div>
+      </div>
+
+      <!-- Last Section -->
+      <div class="container contact">
         <h5>contact</h5>
         <h6>get in touch with me</h6>
         <hr>
         <div class="row">
-          <div class="col s12 m6 l6">
+          <div class="col s6 m6 l6">
             <div class="row">
               <form class="col s12">
                 <div class="row">
                   <div class="input-field col s6">
-
-
-
-
-
                     <div class='contactcontainer'>
                       <header id="contactheader">
                         <h1 id="contacth1">Send us a suggestion!</h1>
@@ -114,20 +160,12 @@
                       <div class='message'>
                         <textarea placeholder='Your Suggestions Here!'></textarea>
                       </div>
-
                         <button id ="contactbutton">Send Suggestion</button>
-                  
                     </div>
-
-</div>
-
-
-
+                </div>
             </div>
-
-
         </form>
-          <div class="col s12 m6 l6 contact-holder">
+          <div class="col s6 m6 l6 contact-holder">
             <h6 class="mdi-action-home">Address</h6>
             <p>Nr. 6, 21 Awesome Street, London, UK</p>
             <h6 class="mdi-hardware-phone-android">Phone Number</h6>
@@ -137,28 +175,13 @@
           </div>
         </div>
       </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
       <footer id = "indexfoot">
         <p>&copy; 2016 Kamari Wright and Ryan-Alexander Thomas.</p>
       </footer>
-    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-<script src='https://cdn.rawgit.com/Dogfalo/materialize/master/dist/js/materialize.min.js'></script>
 
-        <script src="index.js"></script>
-
-
+      <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+      <script src='https://cdn.rawgit.com/Dogfalo/materialize/master/dist/js/materialize.min.js'></script>
+      <script src="index.js"></script>
 </div>
 </div>
   </body>
