added pictures to site

--- a/client/Templates/index.html
+++ b/client/Templates/index.html
@@ -50,6 +50,12 @@
 <div class="container about">
    <h5>about us</h5>
    <h6>let me introduce myself</h6>
+
+<div class="container">
+<img id="can1" src="images/cans.png">
+
+ </div>
+
    <hr>
   <div class="row">
           <div class="col s12 m4 l4">
