--- a/css/style.css
+++ b/css/style.css
@@ -218,6 +218,12 @@ footer
 	  color: #000;
 	}
 
+	#can1{
+	 display: block;
+	max-width: 410px;
+	max-height: 244px;
+	margin: auto;
+	}
 
 
 }
@@ -244,9 +250,14 @@ footer
 		margin-bottom: 7%;
 	}
 
+	#can1{
+	 display: block;
+	max-width: 820px;
+	max-height: 488px;
+	
+	}
 
 
-}
 
 
 /*!!!CONTACT US CSS!!!*/
@@ -353,4 +364,5 @@ textarea {
   outline: none;
   background: rgba(52, 152, 219, 0.1);
   color: rgba(51, 51, 51, 0.7);
+}
 }
