--- a/client/Templates/index.html
+++ b/client/Templates/index.html
@@ -48,8 +48,8 @@
 
 <!-- Section 3 -->
 <div class="container about">
-   <h5>about us</h5>
-   <h6>let me introduce myself</h6>
+   <h5>THE CANDIDATES</h5>
+   <h6>This Guy - President, That Guy - Vice President</h6>
 
 <div class="container">
 <img id="can1" src="images/cans.png">
