added 'need space' id tag

--- a/client/Templates/index.html
+++ b/client/Templates/index.html
@@ -102,8 +102,8 @@
 
       <!--Section 4 -->
       <div class="container portfolio">
-        <h5>Blank</h5>
-        <h6>SQUARES</h6>
+        <h5 id="needspace">POLICIES</h5>
+        <h6>CLICK TO VIEW</h6>
         <hr>
         <div class="row">
           <div class="col s12 m12 l12 portfolio-holder">
