added space for all sections

--- a/client/Templates/index.html
+++ b/client/Templates/index.html
@@ -48,7 +48,7 @@
 
 <!-- Section 3 -->
 <div class="container about">
-   <h5>THE CANDIDATES</h5>
+   <h5 id="needspace">THE CANDIDATES</h5>
    <h6>This Guy - President, That Guy - Vice President</h6>
 
 <div class="container">
@@ -119,7 +119,7 @@
 
       <!--Section 5-->
       <div class="container whos-involved">
-        <h5> Who's Involved </h5>
+        <h5 id="needspace"> Who's Involved </h5>
         <h6> See who's on our staff! </h6>
         <hr>
         <!-- Wheel here -->
@@ -127,7 +127,7 @@
 
       <!--Section 6-->
       <div class="container get-involved">
-        <h5> Get Invovled </h5>
+        <h5 id="needspace"> Get Invovled </h5>
         <h6> Connect with us on social media! </h6>
         <hr>
 
@@ -143,7 +143,7 @@
 
       <!-- Last Section -->
       <div class="container contact">
-        <h5>contact</h5>
+        <h5 id="needspace">contact</h5>
         <h6>get in touch with me</h6>
         <hr>
         <div class="row">
@@ -171,14 +171,17 @@
                 </div>
             </div>
         </form>
-          <div class="col s6 m6 l6 contact-holder">
+
+        <!--  <div class="col s6 m6 l6 contact-holder">
             <h6 class="mdi-action-home">Address</h6>
             <p>Nr. 6, 21 Awesome Street, London, UK</p>
             <h6 class="mdi-hardware-phone-android">Phone Number</h6>
             <p>+91 9912776151</p>
             <h6 class="mdi-action-open-in-browser">Website</h6>
             <p>qnimate.com</p>
-          </div>
+          </div>-->
+
+          
         </div>
       </div>
       <footer id = "indexfoot">
