--- a/client/Templates/index.html
+++ b/client/Templates/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
 
     <title>osu campaign</title>
-
+    <link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/jquery.slick/1.5.9/slick.css"/>
     <link rel='stylesheet prefetch' href='https://cdn.rawgit.com/Dogfalo/materialize/master/dist/css/materialize.min.css'>
     <link rel="stylesheet" href="../css/style.css">
   </head>
@@ -123,6 +123,12 @@
         <h6> See who's on our staff! </h6>
         <hr>
         <!-- Wheel here -->
+        <div class = "wheel">
+            <div> 1 </div>
+            <div> 2 </div>
+            <div> 3 </div>
+            <div> 4 </div>
+        </div>
       </div>
 
       <!--Section 6-->
@@ -181,7 +187,7 @@
             <p>qnimate.com</p>
           </div>-->
 
-          
+
         </div>
       </div>
       <footer id = "indexfoot">
@@ -189,8 +195,9 @@
       </footer>
 
       <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+      <script type="text/javascript" src="http://cdn.jsdelivr.net/jquery.slick/1.5.9/slick.min.js"></script>
       <script src='https://cdn.rawgit.com/Dogfalo/materialize/master/dist/js/materialize.min.js'></script>
-      <script src="index.js"></script>
+      <script type="text/javascript" src="index.js"></script>
 </div>
 </div>
   </body>
