--- a/client/Templates/index.html
+++ b/client/Templates/index.html
@@ -5,227 +5,230 @@
     <meta charset="UTF-8">
 
     <title>osu campaign</title>
-    <link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/jquery.slick/1.5.9/slick.css"/>
-    <link rel='stylesheet prefetch' href='https://cdn.rawgit.com/Dogfalo/materialize/master/dist/css/materialize.min.css'>
-    <link rel="stylesheet" href="../css/style.css">
+    <!--<link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/jquery.slick/1.5.9/slick.css"/>-->
+    <link rel='stylesheet prefetch' type="text/css" href='https://cdn.rawgit.com/Dogfalo/materialize/master/dist/css/materialize.min.css'>
+    <link rel="stylesheet" type = "text/css" href="../css/style.css">
   </head>
 
   <body>
     <!--FACEBOOK CODE-->
     <div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
-<!--END FACEBOOK CODE-->
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
+    <!--END FACEBOOK CODE-->
 
     <div class="intro yellow darken-4 z-depth-1">
-        <h1 class="grey-text text-lighten-5">Test test</h1>
-        <h5 clas="grey lighten-4 grey-text text-darken-1">it's lit</h5>
+      <h1 class="grey-text text-lighten-5">Test test</h1>
+      <h5 clas="grey lighten-4 grey-text text-darken-1">it's lit</h5>
     </div>
 
-<div class = "container questions">
-  <h5>Three Questions </h5>
-  <h6>Our three most important questions </h6>
-  <hr>
-  <div class = "row">
-    <div class = "col s12 m4">
-      <div class = "card">
-        <div class ="card-content">
-          <span class = "card-title"> Question 1 </span>
+    <div class = "container questions">
+      <h5>Three Questions </h5>
+      <h6>Our three most important questions </h6>
+      <hr>
+      <div class = "row">
+        <div class = "col s12 m4">
+          <div class = "card">
+            <div class ="card-content">
+              <span class = "card-title"> Question 1 </span>
+            </div>
+          </div>
+        </div>
+        <div class = "col s12 m4">
+          <div class = "card">
+            <div class ="card-content">
+              <span class = "card-title"> Question 2 </span>
+            </div>
+          </div>
+        </div>
+        <div class = "col s12 m4">
+          <div class = "card">
+            <div class ="card-content">
+              <span class = "card-title"> Question 3 </span>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-    <div class = "col s12 m4">
-      <div class = "card">
-        <div class ="card-content">
-          <span class = "card-title"> Question 2 </span>
+
+    <!-- Section 3 -->
+    <div class="container about">
+      <h5 id="needspace">THE CANDIDATES</h5>
+      <h6>This Guy - President, That Guy - Vice President</h6>
+
+      <div class="container">
+        <img id="can1" src="images/cans.png">
+
+      </div>
+
+      <hr>
+      <div class="row">
+        <div class="col s12 m4 l4">
+          <h6>Story</h6>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
+        <div class="col s12 m4 l4">
+          <h6>Profile</h6>
+          <div class="card yellow darken-4 z">
+            <div class="card-content white-text">
+              <img src="http://labs.qnimate.com/portfolio-materialize/images/profile.png" width="64" height="64">
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
+            </div>
+            <div class="card-action">
+              <a class = "grey" href="#">Link</a>
+              <a class = "grey" href='#'>Link</a>
+            </div>
+          </div>
+        </div>
+        <div class="col s12 m4 l4">
+          <h6>BLANK</h6>
+          <ul class="collapsible">
+            <li class="active">
+              <div class="collapsible-header"><i class="mdi-av-web"></i>Drop1</div>
+              <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
+            </li>
+            <li>
+              <div class="collapsible-header"><i class="mdi-editor-format-align-justify"></i>Drop2</div>
+              <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
+            </li>
+            <li>
+              <div class="collapsible-header"><i class="mdi-av-play-shopping-bag"></i>Drop3</div>
+              <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
+            </li>
+            <li>
+              <div class="collapsible-header"><i class="mdi-editor-insert-comment"></i>Drop4</div>
+              <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
-    <div class = "col s12 m4">
-      <div class = "card">
-        <div class ="card-content">
-          <span class = "card-title"> Question 3 </span>
+
+    <!--Section 4 -->
+    <div class="container portfolio">
+      <h5 id="needspace">POLICIES</h5>
+      <h6>CLICK TO VIEW</h6>
+      <hr>
+      <div class="row">
+        <div class="col s12 m12 l12 portfolio-holder">
+          <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png">
+          <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png">
+          <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png">
+          <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png">
+          <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png">
+          <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png">
         </div>
       </div>
     </div>
+
+    <!--Section 5-->
+    <div class="container whos-involved">
+      <h5 id="needspace"> Who's Involved </h5>
+      <h6> See who's on our staff! </h6>
+      <hr>
+      <!-- Wheel here -->
+      <div class = "wheel">
+        <div> 1 </div>
+        <div> 2 </div>
+        <div> 3 </div>
+        <div> 4 </div>
+      </div>
+    </div>
+
+    <!--Section 6-->
+    <div class="container get-involved">
+      <h5 id="needspace"> Get Invovled </h5>
+      <h6> Connect with us on social media! </h6>
+      <hr>
+
+      <div class = "row">
+
+
+        <!--Twitter Feed-->
+        <div id="twitter" class = "col l6 m6 s12">
+          <a class="twitter-timeline" href="https://twitter.com/kanyewest" data-widget-id="699825061155500032">Tweets by @kanyewest</a>
+          <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
+          </script>
+        </div>
+
+
+
+        <div id="twitter" class="col l6 m6 s12 shift-right" style="float: right;">
+          <a class="twitter-timeline" href="https://twitter.com/hannibalburess" data-widget-id="699825061155500032">Tweets by @hannibalburess</a>
+          <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
+          </script>
+        </div>
+
+
+      </div>
+      <!--<div id="facebook" >
+      <div class="fb-follow" data-href="https://www.facebook.com/zuck" data-layout="standard" data-show-faces="true"></div>
+    </div-->
+  </div>
+
+
+  <!-- Last Section -->
+  <div class="container contact">
+    <h5 id="needspace">contact</h5>
+    <h6>get in touch with me</h6>
+    <hr>
+    <div class="row">
+      <div class="col s6 m6 l6">
+        <div class="row">
+          <form class="col s12">
+            <div class="row">
+              <div class="input-field col s6">
+                <div class='contactcontainer'>
+                  <header id="contactheader">
+                    <h1 id="contacth1">Send us a suggestion!</h1>
+                  </header>
+                  <div class='name'>
+                    <input class='first' placeholder='First Name' type='text'>
+                    <input class='last' placeholder='Last Name' type='text'>
+                  </div>
+                  <div class='contact'>
+                    <input class='email' placeholder='E-mail Address' type='text'>
+                  </div>
+                  <div class='message'>
+                    <textarea placeholder='Your Suggestions Here!'></textarea>
+                  </div>
+                  <button class = "btn waves-effect waves-light" id ="contactbutton">Send Suggestion</button>
+                </div>
+              </div>
+            </div>
+          </form>
+
+          <!--  <div class="col s6 m6 l6 contact-holder">
+          <h6 class="mdi-action-home">Address</h6>
+          <p>Nr. 6, 21 Awesome Street, London, UK</p>
+          <h6 class="mdi-hardware-phone-android">Phone Number</h6>
+          <p>+91 9912776151</p>
+          <h6 class="mdi-action-open-in-browser">Website</h6>
+          <p>qnimate.com</p>
+        </div>-->
+
+
+      </div>
+    </div>
+    <footer id = "indexfoot">
+      <p>&copy; 2016 Kamari Wright and Ryan-Alexander Thomas.</p>
+    </footer>
+
+
+
   </div>
 </div>
-
-<!-- Section 3 -->
-<div class="container about">
-   <h5 id="needspace">THE CANDIDATES</h5>
-   <h6>This Guy - President, That Guy - Vice President</h6>
-
-<div class="container">
-<img id="can1" src="images/cans.png">
-
- </div>
-
-   <hr>
-  <div class="row">
-          <div class="col s12 m4 l4">
-            <h6>Story</h6>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-          </div>
-          <div class="col s12 m4 l4">
-            <h6>Profile</h6>
-            <div class="card yellow darken-4 z">
-              <div class="card-content white-text">
-                <img src="http://labs.qnimate.com/portfolio-materialize/images/profile.png" width="64" height="64">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
-              </div>
-              <div class="card-action">
-                <a class = "grey" href="#">Link</a>
-                <a class = "grey" href='#'>Link</a>
-              </div>
-            </div>
-          </div>
-          <div class="col s12 m4 l4">
-            <h6>BLANK</h6>
-            <ul class="collapsible">
-              <li class="active">
-                <div class="collapsible-header"><i class="mdi-av-web"></i>Drop1</div>
-                <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
-              </li>
-              <li>
-                <div class="collapsible-header"><i class="mdi-editor-format-align-justify"></i>Drop2</div>
-                <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
-              </li>
-              <li>
-                <div class="collapsible-header"><i class="mdi-av-play-shopping-bag"></i>Drop3</div>
-                <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
-              </li>
-              <li>
-                <div class="collapsible-header"><i class="mdi-editor-insert-comment"></i>Drop4</div>
-                <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
-              </li>
-            </ul>
-          </div>
-        </div>
-    </div>
-
-      <!--Section 4 -->
-      <div class="container portfolio">
-        <h5 id="needspace">POLICIES</h5>
-        <h6>CLICK TO VIEW</h6>
-        <hr>
-        <div class="row">
-          <div class="col s12 m12 l12 portfolio-holder">
-            <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png">
-            <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png">
-            <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png">
-            <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png">
-            <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png">
-            <img class="materialboxed" src="http://labs.qnimate.com/portfolio-materialize/images/project.png">
-          </div>
-        </div>
-      </div>
-
-      <!--Section 5-->
-      <div class="container whos-involved">
-        <h5 id="needspace"> Who's Involved </h5>
-        <h6> See who's on our staff! </h6>
-        <hr>
-        <!-- Wheel here -->
-        <div class = "wheel">
-            <div> 1 </div>
-            <div> 2 </div>
-            <div> 3 </div>
-            <div> 4 </div>
-        </div>
-      </div>
-
-      <!--Section 6-->
-      <div class="container get-involved">
-        <h5 id="needspace"> Get Invovled </h5>
-        <h6> Connect with us on social media! </h6>
-        <hr>
-
-        <div class = "row">
-
-
-            <!--Twitter Feed-->
-          <div id="twitter" class = "col l6 m6 s12">
-            <a class="twitter-timeline" href="https://twitter.com/kanyewest" data-widget-id="699825061155500032">Tweets by @kanyewest</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
+<script type="text/javascript" src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<!--<script type="text/javascript" src="http://cdn.jsdelivr.net/jquery.slick/1.5.9/slick.min.js"></script>-->
+<script type="text/javascript" src='https://cdn.rawgit.com/Dogfalo/materialize/master/dist/js/materialize.min.js'></script>
+<!--<script type="text/javascript" src="main.js"></script>-->
+<script>
 </script>
-
-
-
-
-
-<a class="twitter-timeline" href="https://twitter.com/hannibalburess" data-widget-id="699825061155500032">Tweets by @hannibalburess</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
-</script>
-
-
-</div>
-          </div>
-          <div id="facebook" >
-            <!--Facebook Feed-->
-            <div class="fb-follow" data-href="https://www.facebook.com/zuck" data-layout="standard" data-show-faces="true"></div>
-          </div>
-        </div>
-
-
-      <!-- Last Section -->
-      <div class="container contact">
-        <h5 id="needspace">contact</h5>
-        <h6>get in touch with me</h6>
-        <hr>
-        <div class="row">
-          <div class="col s6 m6 l6">
-            <div class="row">
-              <form class="col s12">
-                <div class="row">
-                  <div class="input-field col s6">
-                    <div class='contactcontainer'>
-                      <header id="contactheader">
-                        <h1 id="contacth1">Send us a suggestion!</h1>
-                      </header>
-                      <div class='name'>
-                        <input class='first' placeholder='First Name' type='text'>
-                        <input class='last' placeholder='Last Name' type='text'>
-                      </div>
-                      <div class='contact'>
-                        <input class='email' placeholder='E-mail Address' type='text'>
-                      </div>
-                      <div class='message'>
-                        <textarea placeholder='Your Suggestions Here!'></textarea>
-                      </div>
-                        <button class = "btn waves-effect waves-light" id ="contactbutton">Send Suggestion</button>
-                    </div>
-                </div>
-            </div>
-        </form>
-
-        <!--  <div class="col s6 m6 l6 contact-holder">
-            <h6 class="mdi-action-home">Address</h6>
-            <p>Nr. 6, 21 Awesome Street, London, UK</p>
-            <h6 class="mdi-hardware-phone-android">Phone Number</h6>
-            <p>+91 9912776151</p>
-            <h6 class="mdi-action-open-in-browser">Website</h6>
-            <p>qnimate.com</p>
-          </div>-->
-
-
-        </div>
-      </div>
-      <footer id = "indexfoot">
-        <p>&copy; 2016 Kamari Wright and Ryan-Alexander Thomas.</p>
-      </footer>
-
-      <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-      <script type="text/javascript" src="http://cdn.jsdelivr.net/jquery.slick/1.5.9/slick.min.js"></script>
-      <script src='https://cdn.rawgit.com/Dogfalo/materialize/master/dist/js/materialize.min.js'></script>
-      <script type="text/javascript" src="index.js"></script>
-</div>
-</div>
-  </body>
+</body>
 </template>
