fixed menu. trying to add local placeholders

--- a/client/Templates/index.html
+++ b/client/Templates/index.html
@@ -13,14 +13,14 @@
 <!--MENU CSS-->
 <style type="text/css">
   ul {list-style: none;padding: 0px;margin: 0px;}
-  ul li {display: block;position: relative;float: left;border:1px solid #000}
+  ul li {display: block;position: relative;float: left;border:1px solid #F8F8F8}
   li ul {display: none;}
-  ul li a {display: block;background: #000;padding: 5px 10px 5px 10px;text-decoration: none;
+  ul li a {display: block;background: #A0A0A0;padding: 15px 10px 15px 10px;text-decoration: none;
            white-space: nowrap;color: #fff;}
-  ul li a:hover {background: #f00;}
+  ul li a:hover {background: #A0A0A0;}
   li:hover ul {display: block; position: absolute;}
-  li:hover li {float: none;}
-  li:hover a {background: #f00;}
+  li:hover li {float: left; }
+  li:hover a {background: #F57F17;}
   li:hover li a:hover {background: #000;}
   #drop-nav li ul li {border-top: 0px;}
 </style>
@@ -47,23 +47,23 @@
     <!--END FACEBOOK CODE-->
 
 
-<section id="homeheader">
-    <div class="intro yellow darken-4 z-depth-3">
+
+    <div id="homeheader" class="intro yellow darken-4 z-depth-3">
       <h1 class="grey-text text-lighten-5">Test test</h1>
       <h5 clas="grey lighten-4 grey-text text-darken-1">it's lit</h5>
     </div>
-  </section>
+
 
     <!--MENU CODE-->
 
 
       <ul id="drop-nav">
-    <li><a href="#">Content Management</a>
+    <li><a href="#">Menu</a>
       <ul>
-        <li><a href="#">Joomla</a></li>
-        <li><a href="#">Drupal</a></li>
-        <li><a href="#">WordPress</a></li>
-        <li><a href="#">Concrete 5</a></li>
+        <li><a href="#aboutjump">About  </a></li>
+        <li><a href="#bottom">Contact</a></li>
+        <li><a href="#">Media  </a></li>
+        <li><a href="#">Join   </a></li>
       </ul>
     </li>
   </ul>
@@ -101,6 +101,7 @@
 
     <!-- Section 3 -->
     <div class="container about">
+
       <h5 id="needspace">THE CANDIDATES</h5>
       <h6>This Guy - President, That Guy - Vice President</h6>
 
@@ -202,6 +203,7 @@
 
 
 
+
         <div id="twitter" class="col l6 m6 s12 shift-right" style="float: right;">
           <a class="twitter-timeline" href="https://twitter.com/hannibalburess" data-widget-id="699825061155500032">Tweets by @hannibalburess</a>
           <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
@@ -256,6 +258,7 @@
           <p>qnimate.com</p>
         </div>-->
 
+<a name = "aboutjump"> </a>
 
       </div>
     </div>
