--- a/css/style.css
+++ b/css/style.css
@@ -220,10 +220,12 @@ footer
 	}
 
 	#drop-nav {
+		float: right;
 		position: fixed;
-		float: left;
+
 		z-index: 1;
 		margin-top: -300px;
+		margin-left: 80%;
 	}
 
 
