--- a/client/Templates/index.html
+++ b/client/Templates/index.html
@@ -61,9 +61,11 @@
     <li><a href="#">Menu</a>
       <ul>
         <li><a href="#aboutjump">About  </a></li>
-        <li><a href="#bottom">Contact</a></li>
-        <li><a href="#">Media  </a></li>
-        <li><a href="#">Join   </a></li>
+        <li><a href="#policyjump">Policies</a></li>
+        <li><a href="#staffjump">Staff </a></li>
+        <li><a href="#mediajump">Media </a></li>
+        <li><a href="#contactjump">Contact   </a></li>
+        
       </ul>
     </li>
   </ul>
@@ -101,7 +103,7 @@
 
     <!-- Section 3 -->
     <div class="container about">
-
+<a id = "aboutjump"> </a>
       <h5 id="needspace">THE CANDIDATES</h5>
       <h6>This Guy - President, That Guy - Vice President</h6>
 
@@ -156,6 +158,7 @@
 
     <!--Section 4 -->
     <div class="container portfolio">
+      <a id = "policyjump"> </a>
       <h5 id="needspace">POLICIES</h5>
       <h6>CLICK TO VIEW</h6>
       <hr>
@@ -173,6 +176,7 @@
 
     <!--Section 5-->
     <div class="container whos-involved">
+      <a id = "staffjump"> </a>
       <h5 id="needspace"> Who's Involved </h5>
       <h6> See who's on our staff! </h6>
       <hr>
@@ -195,6 +199,7 @@
 
 
         <!--Twitter Feed-->
+        <a id = "mediajump"> </a>
         <div id="twitter" class = "col l6 m6 s12">
           <a class="twitter-timeline" href="https://twitter.com/kanyewest" data-widget-id="699825061155500032">Tweets by @kanyewest</a>
           <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
@@ -220,6 +225,7 @@
 
   <!-- Last Section -->
   <div class="container contact">
+    <a id = "contactjump"> </a>
     <h5 id="needspace">contact</h5>
     <h6>get in touch with me</h6>
     <hr>
@@ -258,7 +264,7 @@
           <p>qnimate.com</p>
         </div>-->
 
-<a name = "aboutjump"> </a>
+
 
       </div>
     </div>
