--- a/client/Templates/index.html
+++ b/client/Templates/index.html
@@ -65,7 +65,7 @@
         <li><a href="#staffjump">Staff </a></li>
         <li><a href="#mediajump">Media </a></li>
         <li><a href="#contactjump">Contact   </a></li>
-        
+
       </ul>
     </li>
   </ul>
@@ -174,6 +174,14 @@
       </div>
     </div>
 
+
+
+
+
+
+
+
+
     <!--Section 5-->
     <div class="container whos-involved">
       <a id = "staffjump"> </a>
@@ -188,6 +196,13 @@
         <div> 4 </div>
       </div>
     </div>
+
+
+
+
+
+
+
 
     <!--Section 6-->
     <div class="container get-involved">
@@ -268,9 +283,7 @@
 
       </div>
     </div>
-    <footer id = "indexfoot">
-      <p>&copy; 2016 Kamari Wright and Ryan-Alexander Thomas</p>
-    </footer>
+
 
 
 
@@ -280,7 +293,17 @@
 <!--<script type="text/javascript" src="http://cdn.jsdelivr.net/jquery.slick/1.5.9/slick.min.js"></script>-->
 <script type="text/javascript" src='https://cdn.rawgit.com/Dogfalo/materialize/master/dist/js/materialize.min.js'></script>
 <!--<script type="text/javascript" src="main.js"></script>-->
-<script>
-</script>
+
+
+<a href= "images/money.gif"> <h4 > CLICK HERE TO VIEW THE EXPENSE REPORT</h4></a>
+
+
+
+
+
+<footer id = "indexfoot">
+  <p>&copy; 2016 Kamari Wright and Ryan-Alexander Thomas</p>
+</footer>
+
 </body>
 </template>
