--- a/client/Templates/index.html
+++ b/client/Templates/index.html
@@ -72,39 +72,43 @@
     <!-- END MENU CODE-->
 
 
-    <div class = "container questions">
-      <h5>Three Questions </h5>
-      <h6>Our three most important questions </h6>
-      <hr>
-      <div class = "row">
-        <div class = "col s12 m4">
-          <div class = "card">
-            <div class ="card-content">
-              <span class = "card-title"> Question 1 </span>
-            </div>
-          </div>
-        </div>
-        <div class = "col s12 m4">
-          <div class = "card">
-            <div class ="card-content">
-              <span class = "card-title"> Question 2 </span>
-            </div>
-          </div>
-        </div>
-        <div class = "col s12 m4">
-          <div class = "card">
-            <div class ="card-content">
-              <span class = "card-title"> Question 3 </span>
-            </div>
-          </div>
-        </div>
-      </div>
+
+
+
+    <div id="needspace3" class="col s12 m4 l4">
+
+      <ul class="collapsible">
+        <li class="active">
+          <div class="collapsible-header"><i class="mdi-av-web"></i>Who is the greatest of all time?</div>
+          <div class="collapsible-body"><img id="question" src="images/kanye.gif"></div>
+        </li>
+        <li>
+          <div class="collapsible-header"><i class="mdi-editor-format-align-justify"></i>How, Sway? How can we make change?</div>
+          <div class="collapsible-body"><img id="question" src="images/eat.gif"></div>
+        </li>
+        <li>
+          <div class="collapsible-header"><i class="mdi-av-play-shopping-bag"></i>Can you see the light?</div>
+          <div class="collapsible-body"><img id="question" src="images/puppy.gif"></div>
+        </li>
+
+      </ul>
     </div>
+
+
+
+
+
+
+
+
+
+
+
 
     <!-- Section 3 -->
     <div class="container about">
 <a id = "aboutjump"> </a>
-      <h5 id="needspace">THE CANDIDATES</h5>
+      <h5 id="needspace2">THE CANDIDATES</h5>
       <h6>This Guy - President, That Guy - Vice President</h6>
 
       <div class="container">
@@ -132,27 +136,18 @@
             </div>
           </div>
         </div>
-        <div class="col s12 m4 l4">
-          <h6>BLANK</h6>
-          <ul class="collapsible">
-            <li class="active">
-              <div class="collapsible-header"><i class="mdi-av-web"></i>Drop1</div>
-              <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
-            </li>
-            <li>
-              <div class="collapsible-header"><i class="mdi-editor-format-align-justify"></i>Drop2</div>
-              <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
-            </li>
-            <li>
-              <div class="collapsible-header"><i class="mdi-av-play-shopping-bag"></i>Drop3</div>
-              <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
-            </li>
-            <li>
-              <div class="collapsible-header"><i class="mdi-editor-insert-comment"></i>Drop4</div>
-              <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
-            </li>
-          </ul>
-        </div>
+
+
+
+
+
+
+
+
+
+
+
+
       </div>
     </div>
 
