Updated canditate portraits and links

--- a/client/Templates/index.html
+++ b/client/Templates/index.html
@@ -118,21 +118,33 @@
 
       <hr>
       <div class="row">
+
+
         <div class="col s12 m4 l4">
-          <h6>Story</h6>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        </div>
-        <div class="col s12 m4 l4">
-          <h6>Profile</h6>
-          <div class="card yellow darken-4 z">
+          <h6>PRESIDENT</h6>
+          <div class="card grey z">
             <div class="card-content white-text">
-              <img src="http://labs.qnimate.com/portfolio-materialize/images/profile.png" width="64" height="64">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
+              <img src="images/can1.jpg" width="64" height="64">
+              <p>Cool guy. Likes trutles. No Ragarts.</p>
             </div>
             <div class="card-action">
-              <a class = "grey" href="#">Link</a>
-              <a class = "grey" href='#'>Link</a>
+              <a class = "grey" href="#">Facebook</a>
+              <a class = "grey" href='#'>Snapchat</a>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="col s12 m4 l4">
+          <h6>VICE PRESIDENT</h6>
+          <div class="card grey  z">
+            <div class="card-content white-text">
+              <img src="images/can2.jpg" width="64" height="64">
+              <p>Once opened for Good Charlotte in SXSW.</p>
+            </div>
+            <div class="card-action">
+              <a class = "grey" href="#">Facebook</a>
+              <a class = "grey" href='#'>Snapchat</a>
             </div>
           </div>
         </div>
